--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <img src="img/3.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
+                <a href="/Blogging/blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -84,7 +84,7 @@
                 <img src="img/1.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
+                <a href="/Blogging/blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -97,7 +97,7 @@
                 <img src="img/2.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
+                <a href="/Blogging/blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -110,7 +110,7 @@
                 <img src="img/1.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
+                <a href="/Blogging/blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -123,7 +123,7 @@
                 <img src="img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
+                <a href="/Blogging/blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -136,7 +136,7 @@
                 <img src="img/3.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
+                <a href="/Blogging/blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -149,7 +149,7 @@
                 <img src="img/2.png" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
+                <a href="/Blogging/blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
@@ -162,7 +162,7 @@
                 <img src="img/11.svg" alt="article">
             </div>
             <div class="home-article-content font1">
-                <a href="/blogpost.html">
+                <a href="/Blogging/blogpost.html">
                     <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
                 </a>
 
