--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
             </a>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/Blogging/search.html">About</a></li>
+                <li><a href="/Blogging/contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
@@ -63,7 +63,6 @@
 
     <div class="footer">
         <p>Copyright &copy; iBlog.com </p>
-         <a href="https://www.vecteezy.com/free-vector/typewriter">Vector Credits: Vecteezy</a> 
     </div>
 </body>
 </html>
