--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <span><img src="img/logo.png" width="94px" alt=""></span>
             </a>
             <ul>
-                <li><a href="/Blogging/">Home</a></li>
+                <li><a href="hasan-raza-coder.github.io/Blogging/">Home</a></li>
                 <li><a href="/Blogging/search.html">About</a></li>
                 <li><a href="/Blogging/contact.html">Contact</a></li>
             </ul>
