--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                 <span><img src="img/logo.png" width="94px" alt=""></span>
             </a>
             <ul>
-                <li><a href="/Blogging/">Home</a></li>
+                <li><a href="/Blogging/index.html">Home</a></li>
                 <li><a href="/Blogging/search.html">About</a></li>
                 <li><a href="/Blogging/contact.html">Contact</a></li>
             </ul>
